--- a/src/app/templates/recommendations.html
+++ b/src/app/templates/recommendations.html
@@ -18,7 +18,7 @@
                         chosen_type=chosen_type,
                         string_search=string_search,
                         chosen_column=chosen_column,
-                        page=page) }}" class="recommended_back_link"><strong><</strong> Back to results</a>
+                        page=page) }}" class="link recommended_back"><strong><</strong> Back to results</a>
         </div>
 
         <div class="recommendations_right">
