--- a/src/app/static/css/details_style.css
+++ b/src/app/static/css/details_style.css
@@ -46,26 +46,10 @@
     padding-top: 3px;
 }
 
-.details_back_link {
+.details_back {
     display: block;
     width: 110px;
     margin: 20px auto;
-    padding: 8px;
-    border: 1px solid #e6e6e6;
-    border-radius: 8px;
-    box-shadow: 1px 1px 5px 2px #e6e6e6;
-    font-size: 11px;
-    text-align: center;
-    font-family: Futura, sans serif;
-    text-decoration: none;
-    color: black;
-    background-color: #FBFBFB;
-    cursor: pointer !important;
-}
-
-.details_back_link:hover {
-    color: #007bff;
-    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
 }
 
 /* RIGHT SIDE */
@@ -114,12 +98,6 @@
     border-bottom-right-radius: 9px;
 }
 
-.details_item_1:hover, .details_item_2:hover {
-    color: #007bff;
-    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
-
-}
-
 .category {
     padding: 15px;
     font-size: 13px;
@@ -164,11 +142,6 @@ h2 {
     cursor: pointer !important;
     display: inline-block;
     margin-bottom: 2px;
-}
-
-.details_redirect:hover {
-    color: #007bff;
-    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
 }
 
 .details_element_line {
