--- a/src/app/static/css/results_style.css
+++ b/src/app/static/css/results_style.css
@@ -49,27 +49,8 @@
     text-align: center;
 }
 
-a.results_link_details, a.results_link_reco {
-    padding: 8px;
-    border: 1px solid #e6e6e6;
-    border-radius: 8px;
-    box-shadow: 1px 1px 5px 2px #e6e6e6;
-    font-size: 11px;
-    text-align: center;
-    font-family: Futura, sans serif;
-    text-decoration: none;
-    color: black;
-    background-color: #FBFBFB;
-    cursor: pointer !important;
-}
-
-a.results_link_reco {
+.reco_link {
     margin-left: 8px;
-}
-
-a.results_link_details:hover, a.results_link_reco:hover {
-    color: #007bff;
-    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
 }
 
 .nav_links{
@@ -91,9 +72,6 @@ a.results_link_details:hover, a.results_link_reco:hover {
     text-decoration: none;
     font-size: 15px;
     color: black;
-}
-
-.nav_links > a:hover {
-    color: #007bff;
-    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
+    background-color: #FBFBFB;
+    cursor: pointer !important;
 }
