--- a/src/app/templates/_items.html
+++ b/src/app/templates/_items.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="results_link_container">
-        <a href="{{ url_for('details', id=movie.index, chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column, chosen_order=chosen_order, page=page) }}" class="results_link_details">Details</a>
-        <a href="{{ url_for('recommendations', id=movie.index, chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column, chosen_order=chosen_order, page=page) }}" class="results_link_reco">More like</a>
+        <a href="{{ url_for('details', id=movie.index, chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column, chosen_order=chosen_order, page=page) }}" class="link">Details</a>
+        <a href="{{ url_for('recommendations', id=movie.index, chosen_type=chosen_type, string_search=string_search, chosen_column=chosen_column, chosen_order=chosen_order, page=page) }}" class="link reco_link">More like</a>
     </div>
 </li>
