--- a/src/app/templates/_searchbar.html
+++ b/src/app/templates/_searchbar.html
@@ -7,7 +7,7 @@
             {{ form.chosen_column_order.label }}{{ form.chosen_column_order(class="dropdown_list") }}{{ form.chosen_order(class="dropdown_list") }}
         </div>
         <div class="search_submit">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" class="link">
         </div>
     </form>
 </div>
