--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -22,6 +22,7 @@
         <li><a href="{{ url_for('index') }}" class="header_link">Home</a></li>
         {% if current_user.is_anonymous %}
         <li><a href="{{ url_for('login') }}" class="header_link">Login</a></li>
+        <li><a href="{{ url_for('register') }}" class="header_link">Register</a></li>
         {% else %}
         <li><a href="{{ url_for('logout') }}" class="header_link">Logout</a></li>
         {% endif %}
