--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -24,6 +24,7 @@
         <li><a href="{{ url_for('login') }}" class="header_link">Login</a></li>
         <li><a href="{{ url_for('register') }}" class="header_link">Register</a></li>
         {% else %}
+        <li><a href="{{ url_for('user', username=current_user.username) }}" class="header_link">Profile</a></li>
         <li><a href="{{ url_for('logout') }}" class="header_link">Logout</a></li>
         {% endif %}
     </ul>
