Added detail for last seen

--- a/src/app/templates/user.html
+++ b/src/app/templates/user.html
@@ -6,7 +6,7 @@
 
     <p>Username: {{ user.username }}</p>
     <p>About me: {{ user.about_me }}</p>
-    <p>Last seen: {{ user.last_seen }}</p>
+    <p>Last seen: {{ user.last_seen }} (UTC)</p>
 
 </main>
 
