--- a/src/app/static/css/style.css
+++ b/src/app/static/css/style.css
@@ -135,6 +135,8 @@ h1 {
 
 .string_field {
     width: 245px;
+    border: 1px solid #e6e6e6;
+    box-shadow: inset 1px 1px 5px 2px #e6e6e6;
 }
 
 .dropdown_list {
@@ -170,14 +172,15 @@ h1 {
 .details_item_1:hover,
 .details_item_2:hover,
 .nav_links > a:hover {
-    color: #007bff;
-    background: -webkit-linear-gradient(bottom, #ffffff 0%, #e6e6e6 100%);
+    color: #FFF;
+    background: #007bff;
+    border-color: #007bff;
+    box-shadow: 1px 1px 5px 2px #bfdaff;
 }
 
 .flashes {
-    border: 1px solid #7bb4d2;
+    border: 1px solid #007bff;
     border-radius: 10px;
-    background-color: #bbe3f6;
     padding: 10px;
     width: 550px;
     margin: auto;
@@ -204,7 +207,7 @@ h1 {
     display: block;
     text-align: center;
     font-family: Futura, sans-serif;
-    font-size: 13px;
+    font-size: 12px;
 }
 
 .user_form > form {
@@ -229,5 +232,13 @@ h1 {
 }
 
 .user_h1 {
-    margin-top: 60px;
+    margin-top: 40px;
+}
+
+.form_boxes {
+    border: 1px solid #e6e6e6;
+    box-shadow: inset 1px 1px 5px 2px #e6e6e6;
+    border-radius: 5px;
+    padding: 8px;
+    background: #fbfbfb;
 }
