--- a/src/app/templates/login.html
+++ b/src/app/templates/login.html
@@ -14,16 +14,16 @@
             {{ form.hidden_tag() }}
             <p>
                 {{ form.username.label }}<br>
-                {{ form.username(size=32) }}<br>
+                {{ form.username(size=32, class="form_boxes") }}<br>
                 {% for error in form.username.errors %}
-                    <span>[{{ error }}]</span>
+                    <span>{{ error }}</span>
                 {% endfor %}
             </p>
             <p>
                 {{ form.password.label }}<br>
-                {{ form.password(size=32) }}<br>
+                {{ form.password(size=32, class="form_boxes") }}<br>
                 {% for error in form.password.errors %}
-                    <span>[{{ error }}]</span>
+                    <span>{{ error }}</span>
                 {% endfor %}
             </p>
             <p class="form_center">{{ form.remember_me() }} {{ form.remember_me.label }}</p>
