--- a/src/app/templates/register.html
+++ b/src/app/templates/register.html
@@ -10,30 +10,30 @@
             {{ form.hidden_tag() }}
             <p>
                 {{ form.username.label }}<br>
-                {{ form.username(size=32) }}<br>
+                {{ form.username(size=32, class="form_boxes") }}<br>
                 {% for error in form.username.errors %}
-                    <span>[{{ error }}]</span>
+                    <span>{{ error }}</span>
                 {% endfor %}
             </p>
             <p>
                 {{ form.email.label }}<br>
-                {{ form.email(size=32) }}<br>
+                {{ form.email(size=32, class="form_boxes") }}<br>
                 {% for error in form.email.errors %}
-                    <span>[{{ error }}]</span>
+                    <span>{{ error }}</span>
                 {% endfor %}
             </p>
             <p>
                 {{ form.password.label }}<br>
-                {{ form.password(size=32) }}<br>
+                {{ form.password(size=32, class="form_boxes") }}<br>
                 {% for error in form.password.errors %}
-                    <span>[{{ error }}]</span>
+                    <span>{{ error }}</span>
                 {% endfor %}
             </p>
             <p>
                 {{ form.password2.label }}<br>
-                {{ form.password2(size=32) }}<br>
+                {{ form.password2(size=32, class="form_boxes") }}<br>
                 {% for error in form.password2.errors %}
-                    <span>[{{ error }}]</span>
+                    <span>{{ error }}</span>
                 {% endfor %}
             </p>
             <p class="form_center">{{ form.submit(class="link") }}</p>
